Fix Faculty Alignment

--- a/css/faculty-page.css
+++ b/css/faculty-page.css
@@ -36,6 +36,7 @@
 .faculty-item{
   margin-bottom: 90px;
   width: 100%;
+  height: 60px;
 }
 
 @media(min-width: 768px){
